fix title can't be hidden in <img /> type icon when menu collapsed

--- a/src/components/SiderMenu/index.less
+++ b/src/components/SiderMenu/index.less
@@ -49,4 +49,18 @@
   .drawer .drawer-content {
     background: #001529;
   }
+  .ant-menu-inline-collapsed {
+    & > .ant-menu-item .sider-menu-item-img + span,
+    & > .ant-menu-item-group > .ant-menu-item-group-list > .ant-menu-item .sider-menu-item-img + span,
+    & > .ant-menu-submenu > .ant-menu-submenu-title .sider-menu-item-img + span {
+      max-width: 0;
+      display: inline-block;
+      opacity: 0;
+    }
+  }
+  .ant-menu-item .sider-menu-item-img + span,
+  .ant-menu-submenu-title .sider-menu-item-img + span {
+    transition: opacity .3s @ease-in-out, width .3s @ease-in-out;
+    opacity: 1;
+  }
 }
